--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,7 @@ h1, h2, h3 {
     height: auto;
     border: solid 1px #000000;
     border-radius: 5px;
-    margin-top: 40px;
+    margin: 80px 0 20px 0;
     padding: 5px;
     line-height: 1.2;
 }
@@ -53,4 +53,15 @@ h1, h2, h3 {
 
 #red {
     color: #ff0000;
+}
+
+/* Currency selector */
+
+#currency {
+    padding: 5px;
+    margin: 20px 0;
+}
+
+#currency-wrapper {
+    text-align: left;
 }
