--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,3 +65,36 @@ h1, h2, h3 {
 #currency-wrapper {
     text-align: left;
 }
+
+/* Form data */
+
+summary h2 {
+    text-transform: uppercase;
+}
+
+.user-input {
+    margin: 20px auto;
+    width: 80%;
+
+}
+
+.user-input label {
+    border: solid 0.5px #000000;
+    border-radius: 3px;
+    padding: 5px;
+    margin-right: 20px;
+    display: inline-block;
+    width: 25vw;
+    text-align: left;
+}
+
+.user-input input {
+    padding: 5px;
+    width: 25vw;
+    margin-right: 20px;
+}
+
+.user-input select {
+    padding: 5px;
+
+}
