--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,13 +92,15 @@ h1, h2, h3 {
 summary h2 {
     text-transform: uppercase;
     display: inline;
+
 }
 
 .drop {
     list-style-type: none;
     width: 60%;
-    margin: auto;
+    margin: 5px auto;
     cursor: pointer;
+    border: solid 1px #000000;
 }
 
 .drop::after {
@@ -141,4 +143,12 @@ details[open] .drop::after {
 .user-input select {
     padding: 5px;
 
+}
+
+.add-box {
+    width: 60%;
+    margin: auto;
+    text-align: left;
+    font-size: 2rem;
+    color: #008600;
 }
