Add script to target add box buttons to insert template literals into the correct area of the DOM

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -159,6 +159,7 @@ details[open] .drop::after {
     border: none;
     background-color: unset;
     display: inline;
+    cursor: pointer;
 }
 
 .add-box p {
