--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,9 +3,9 @@
 
 /* Global styling */
 body {
-    background-color: #ffffff;
+    background: radial-gradient(#ffffff, #e9e5e5); 
     font-family: 'Roboto', sans-serif;
-    color: #000000;
+    color: #008600;
     text-align: center;
     margin: 0;
     padding: 0;
@@ -19,7 +19,7 @@ h1, h2, h3 {
 
 /* Page header styling */
 #heading {
-    background-color: #008600;
+    background: radial-gradient(#00b200, #008600);  
     color: #ffffff;
     font-size: 1.5rem;
     width: 100%;
@@ -47,22 +47,25 @@ h1, h2, h3 {
 }
 
 #how-to-use summary::after {
-    content: '+';
-    color: gray;
+    content: '\24D8';
+    font-weight: 600;
+    color: #008600;
     padding-left: 10px;
 }
 
 #how-to-use[open] summary::after {
-    content: '-';
-    color: gray;
+    content: '\24D8';
+    font-weight: 600;
+    color: #008600;
     padding-left: 10px;
 }
 
 #how-to-info {
     width: 300px;
     height: auto;
-    border: solid 1px #000000;
+    border: solid 1px #008600;
     border-radius: 5px;
+    background-color: #ffffff;
     padding: 5px;
     line-height: 1.2;
     margin-top: 5px;
@@ -70,6 +73,8 @@ h1, h2, h3 {
 
 #green {
     color: #00b200;
+    font-size: 1.2rem;
+    font-weight: 600;
 }
 
 #red {
@@ -81,6 +86,9 @@ h1, h2, h3 {
 #currency {
     padding: 5px;
     margin: 20px 0;
+    color: #008600;
+    border-radius: 5px;
+    border-color: #008600;
 }
 
 #currency-wrapper {
@@ -98,26 +106,28 @@ summary h2 {
 
 .drop {
     list-style-type: none;
+    background: radial-gradient(#ffffff, #d1cfcf);
+    border-radius: 25px;
     width: 60%;
     margin: 5px auto;
     cursor: pointer;
-    border: solid 1px #000000;
+    border: none;
 }
 
 .drop::after {
-    content: '+';
-    font-size: 2rem;
+    content: '\25BC';
+    font-size: 1.2rem;
     color: grey;
     float: right;
-    padding-right: 20px;
+    padding: 7px 20px 0 0;
 }
 
 details[open] .drop::after {
-    content: '-';
-    font-size: 2rem;
+    content: '\25B2';
+    font-size: 1.2rem;
     color: grey;
     float: right;
-    padding-right: 20px;
+    padding: 7px 20px 0 0;
 }
 
 .user-input {
@@ -127,6 +137,7 @@ details[open] .drop::after {
 
 .user-input label {
     border: solid 0.5px #000000;
+    background-color: #ffffff;
     border-radius: 3px;
     padding: 5px;
     margin-right: 20px;
@@ -177,7 +188,7 @@ details[open] .drop::after {
 }
 
 .rem-box-btn {
-    font-size: 2rem;
+    font-size: 1.5rem;
     color: #ff0000;
     border: none;
     background-color: unset;
@@ -195,7 +206,7 @@ details[open] .drop::after {
 
 footer {
     height: 80px;
-    background-color: #008600;
+    background: radial-gradient(#00b200, #008600);
     color: #ffffff;
 }
 
