--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,13 +37,18 @@ h1, h2, h3 {
 
 /* How to use box */
 #how-to-use {
+    width: 150px;
     text-align: left;    
     margin: 80px 0 20px 0;   
 }
 
 #how-to-use summary {
     cursor: pointer;
-    list-style-type: none;
+    list-style: none;
+}
+
+#how-to-use summary::-webkit-details-marker {
+    display: none;
 }
 
 #how-to-use summary::after {
