--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ h1, h2, h3 {
     list-style: none;
 }
 
-#how-to-use summary::marker {
+#how-to-use summary::-webkit-details-marker {
     display: none;
 }
 
@@ -124,7 +124,7 @@ summary h2 {
     border: none;
 }
 
-.drop::marker {
+.drop::-webkit-details-marker {
     display: none;
 }
 
