--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,15 +31,15 @@ h1, h2, h3 {
 }
 
 .container {
-    width: 80%;
     margin: 0 auto;
+    width: 70%;   
 }
 
 /* How to use box */
 #how-to-use {
     width: 150px;
     text-align: left;    
-    margin: 80px 0 20px 0;   
+    margin: 40px 0 20px 0;   
 }
 
 #how-to-use summary {
@@ -90,14 +90,14 @@ h1, h2, h3 {
 
 #currency {
     padding: 2px;
-    margin: 20px 0;
+    margin-bottom: 20px;
     color: #008600;
     border-radius: 25px;
     border: solid 2px #008600;
 }
 
 #currency-wrapper {
-    text-align: left;
+    text-align: right;
 }
 
 /* Form data */
@@ -257,13 +257,13 @@ details[open] .drop::after {
 /*Footer*/
 
 footer {
-    height: 80px;
+    height: 60px;
     background: radial-gradient(#00b200, #008600);
     color: #ffffff;
 }
 
 footer p {
-    padding-top: 32px;
+    padding-top: 22px;
 }
 
 /* Results section */
