Add media query for how to use drop down and currency selector on small screens to keep inline with other content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -311,7 +311,7 @@ footer p {
         font-size: 1rem;
     }
 
-    .drop, .user-input, .add-box, .rem-box {
+    .drop, .user-input, .add-box, .rem-box, .container {
         width: 90%;
     }
 
