Change scroll into view method for results and chart section to scroll to end position. Add media query for screens smaller than 360px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -343,3 +343,16 @@ footer p {
         width: 100%;
     }
 }
+
+/* For screens up to 360px wide */
+
+@media screen and (max-width: 360px) {
+    
+    .drop, .user-input, .add-box, .rem-box, .container {
+        width: 96%;
+    }
+
+    #calculate button {
+        margin: 2px;
+    }
+}
